<resources>
    <string name="app_name">Teleclone</string>


    <string name="create_group">Создать группу</string>
    <string name="create_secret_chat">Создать секретный чат</string>
    <string name="create_channel">Создать канал</string>
    <string name="contacts">Контакты</string>
    <string name="calls">Звонки</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="invite_friends">Пригласить друзей</string>
    <string name="questions">Вопросы о Teleclone</string>
    <string name="settings_default_user_name">User</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_title_account">Акаунт</string>
    <string name="settings_default_number">+79913599118</string>
    <string name="settings_label_number">Нажмите, чтобы cменить номер телефона</string>
    <string name="settings_default_user_name_account">\@user</string>
    <string name="settings_label_user_name">Имя пользователя</string>
    <string name="settings_default_about">О себе</string>
    <string name="settings_label_about">Напишите немного о себе</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="enter_code">Введите код</string>
    <string name="cd_register_image">Register image</string>
    <string name="enter_code_mask">- - - - - -</string>

    <string name="enter_phone">Введите номер телефона</string>
    <string name="verifiPhone">Проверка телефона</string>
    <string name="welcome">Добро пожаловать.</string>
    <string name="change_name_save">Сохранить</string>
    <string name="change_name_hint">Имя</string>
    <string name="change_surname_hint">Фамилия</string>
    <string name="change_name_error">Имя не можеть быть пустым</string>

    <string name="update_data">Данные обновлены</string>
    <string name="change_user_name">Имя пользователя</string>
    <string name="change_full_name">Полное имя</string>
    <string name="error_change_user_name_empty">Имя пользователя не может быть пустой строкой</string>
    <string name="invalide_user_name">Некорректное имя пользователя</string>
    <string name="bio_hint">Bio</string>
    <string name="change_bio">Информация о себе</string>
    <string name="state_online">в сети</string>
    <string name="contacts_title">Контакты</string>
    <string name="enter_phone_hint">Номер телефона</string>
    <string name="btn_sheet_image_description">Изображение</string>
    <string name="btn_sheet_file_description">Файл</string>
    <string name="chat_menu_delete">Удалить чат</string>
    <string name="chat_menu_clear">Очистить чат</string>
</resources>